public/css/style.css
@font-face {
    src: url(/fonts/fortnite.ttf);
    font-family: fortnite;
}

* {
    margin: 0px;
    padding: 0px;
    font-family: fortnite;
    color: #03A9F4;
}

header {
    background: #03A9F4;
    color: white;
    height: 65px;
    letter-spacing: 5px;
    display: flex;
    flex-direction: column;
}

nav {
    text-align: right;
}

header h1 {
    text-align: center;
    position: relative;
    font-size: 3em;
    color: white;
}

iframe {
    width: 100%;
    height: 230px;
    border: 0px;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
}

/*  MODAL */

.modal {
    display: none;
    position: fixed;
    z-index: 5;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background: rgba(0,0,0,0.5);
}

.modal-content {
    background: white;
    margin: 6% auto;
    padding: 20px;
    width: 80%;
    border-radius: 18px;
    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
    animation-name: modalOpen;
    animation-duration: 1.5s;
}

.modal-body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal p {
    text-align: center;
}

.modal-header {
    color: #2196F3;
}

.modal-header h1 {
    text-align: center;
    color: #03A9F4;
}

.modal-header a {
    color: #673ab7;
}

/*   form     */

.form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}


.edit-form{
    display: none;
}

/*  Button Input  */

.btn {
    background: #673ab7;
}

.hamburger {
    background: #03a9f4;
    color: white;
    font-size: 24px;
}

.ham-btn, .home-btn, .logged-btn {
    border: 0px;
    background: none;
    padding: 5px;
}

.home-btn {
    color: white;
    font-size: 24px;
}

.edit-btn {
    align-self: center;
}

input, .btn {
    text-align: center;
    width: 80%;
    color: black;
    font-weight: bold;
    letter-spacing: 3px;
    border-radius: 5px;
    border: 0;
    height: 25px;
    margin-bottom: 5px;
    background: rgba(0,0,0,0);
}

input:hover, .btn:hover {
    box-shadow: 0 0 5px #2196F3;
}

.upload-btn {
    width: 23%;
}

.dislike-btn, .like-btn {
    border: 0px;
    font-size: 23px;
}

.edit-form{
    display: none;
}


section {
    display: flex;
    flex-direction: column;
    align-items: center;
}

article:nth-child(1) {
    border-bottom: 2px solid;
    padding-bottom: 4px;
}

section article {
    margin: 1% auto;
    width: 95%;
}

.center-art {
    display: flex;
    flex-direction: column;
    align-items: center;
}


/*  user index  */

.user-vid {
    width: 90%;
}

.info-div {
    display: flex;
    justify-content: space-evenly;
}

.user-vid-list {
    margin-top: 3px;
}

.user-vid-list button {
    width: 23%;
}

/*  home index  */

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.home-btn-div {
    display: flex;
    justify-content: space-between;
    height: 20px;
    z-index: 100;
}

.filter-div {
    display: flex;
    justify-content: center;
    margin-top: 5px;
}

.vid-info-home {
    display: flex;
    justify-content: space-evenly;
}

div.scrollmenu {
  background-color: #333;
  overflow: auto;
  white-space: nowrap;
  display: flex
}

div.scrollmenu a {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 10px;
  text-decoration: none;
}

div.scrollmenu a:hover {
  background-color: #777;
}

div.video-player {
  margin-right: 25px;
}

/*  KEY FRAMES  */

@keyframes modalOpen {
    from {opacity: 0;}
    to {opacity: 1;}
}

